--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -28,11 +28,33 @@
   flex-grow: 1;
 }
 
+.nav{
+  position:fixed;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #000;
+  width: 100vw;
+  h2{
+    color:orange;
+    margin-right: 20px;
+  }
+  h3{
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+
+}
+
 .headerBox {
   background-color: #222;
   width: 90vw;
   border-radius: 10px;
-
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .social {
@@ -56,13 +78,34 @@
   justify-content: center;
 }
 
-
-
 .titleText {
   color: white;
   flex: 1;
   text-align: center;
 
+}
+
+.aboutBox {
+  background-color: #222;
+  width: 90vw;
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media (max-width: 999px) {
+    p{
+      width: 80vw;
+
+    }
+  }
+  @media (min-width: 1000px) {
+    p{
+      width: 70vw;
+
+    }
+  }
 }
 
 .title a {
@@ -158,7 +201,7 @@
     border-color: #222;
   }
   .code {
-    background: #111;
+    background: #000;
   }
   .logo img {
     filter: invert(1);
