--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -12,6 +12,79 @@
   align-items: center;
 }
 
+.skillContent {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 0.25em;
+  width: 80vw;
+}
+
+
+.skills {
+  width: 100px;
+  height: 100px;
+  margin: 0.5em 0.5em 0.5em 0.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  text-decoration: none;
+  color: black;
+  text-align: center;
+  border-radius: 0.25em;
+  box-shadow: 3px 3px 8px black;
+}
+
+#splashAnimation {
+  --sal-duration: 2s;
+  max-width: 100%;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  height: 60px;
+  // width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: rgb(40, 40, 40);
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 140%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent black transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
 .footer {
   display: flex;
   flex: 1;
