--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,14 +2,28 @@
   padding: 0 2rem;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 999px) {
+  .main{
+    min-height: 100vh;
+    padding: 4rem 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (min-width: 1000px) {
+  .main{
+    min-height: 100vh;
+    padding: 4rem 0;
+    width: 100vw;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .skillContent {
@@ -21,6 +35,19 @@
   padding: 10px;
   border-radius: 0.25em;
   width: 80vw;
+}
+
+@media (min-width: 1000px) {
+  .skillContent{
+    display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 0.25em;
+  width: 50vw;
+  }
 }
 
 
@@ -39,6 +66,8 @@
   border-radius: 0.25em;
   box-shadow: 3px 3px 8px black;
 }
+
+
 
 #splashAnimation {
   --sal-duration: 2s;
@@ -130,6 +159,18 @@
   align-items: center;
 }
 
+@media (min-width: 1000px) {
+  .headerBox{
+    padding: 4rem 0;
+    width: 50vw;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 .social {
   a {
     color: white;
@@ -149,6 +190,14 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.headerTitle {
+  color: white;
+  flex: 1;
+  font-size: 50px;
+  text-align: center;
+
 }
 
 .titleText {
@@ -175,10 +224,24 @@
   }
   @media (min-width: 1000px) {
     p{
-      width: 70vw;
+      width: 40vw;
 
     }
   }
+}
+
+@media (min-width: 1000px) {
+  .aboutBox{
+    padding: 4rem 0;
+    width: 50vw;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
 }
 
 .title a {
