--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,16 @@
+$themes: (
+  default: (
+    bg: 'white',
+    card-bg: #999,
+    text: 'black',
+  ),
+  dark: (
+    bg: #000,
+    card-bg: #222,
+    text: 'white',
+  ),
+);
+
 .container {
   padding: 0 2rem;
 }
@@ -27,7 +40,6 @@
     margin-right: 10px;
     margin-left: 10px;
   }
-
 }
 
 .headerBox {
@@ -66,8 +78,7 @@
   i:hover {
     color: orange;
   }
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-size: 25pt;
   display: flex;
   flex-direction: row;
@@ -79,14 +90,12 @@
   flex: 1;
   font-size: 50px;
   text-align: center;
-
 }
 
 .titleText {
   color: white;
   flex: 1;
   text-align: center;
-
 }
 
 .aboutBox {
@@ -101,13 +110,11 @@
   @media (max-width: 999px) {
     p{
       width: 80vw;
-
     }
   }
   @media (min-width: 1000px) {
     p{
       width: 40vw;
-
     }
   }
 }
@@ -157,15 +164,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  background-color: transparent;
   text-decoration: none;
   color: black;
   text-align: center;
-  border-radius: 0.25em;
-  box-shadow: 3px 3px 8px black;
+  border-radius: 4px;
 }
-
-
 
 #splashAnimation {
   --sal-duration: 2s;
@@ -228,6 +232,29 @@
   flex-grow: 1;
 }
 
+.contactBox {
+  background-color: #222;
+  width: 90vw;
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 1000px) {
+  .contactBox{
+    padding: 4rem 0;
+    width: 50vw;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 .contactForm{
   display: flex;
   flex-direction: column;
@@ -239,7 +266,8 @@
     background-color: #eaeaea;
     border-width: 0px;
     height:30px;
-    border-radius: 10px;
+    width:30vw;
+    border-radius: 4px;
     padding: 0px 0px 0px 10px;
     color: #000;
   }
@@ -247,13 +275,23 @@
     background-color: #eaeaea;
     border-width: 0px;
     height:50px;
-    border-radius: 10px;
+    width:30vw;
+    border-radius: 4px;
     padding: 0px 0px 0px 10px;
     color: #000;
   }
   button{
-    margin: 10px 5px 10px 5px;
-
+    margin: 20px 0px 15px 0px;
+    height:25px;
+    background-color: #555;
+    border-radius: 4px;
+    border: 0px;
+    -webkit-transition: background-color 0.3s; /* For Safari 3.0 to 6.0 */
+    transition: background-color 0.3s; /* For modern browsers */
+  }
+  button:hover{
+    background-color: orange;
+    cursor: pointer;
   }
 }
 
