--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -23,6 +23,7 @@ $themes: (
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  // background-color: #000;
 }
 
 .nav{
