--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -85,6 +85,8 @@
   color: white;
   flex: 1;
   text-align: center;
+  display: flex;
+  align-items: center;
 }
 
 .aboutBox {
@@ -169,7 +171,6 @@
   position: relative;
   display: inline-block;
   height: 60px;
-  // width: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -198,7 +199,8 @@
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: transparent transparent black transparent;
+  border-color: transparent transparent rgb(40, 40, 40) transparent;
+
 }
 
 .tooltip:hover .tooltiptext {
