--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -129,7 +129,6 @@
   align-content: center;
   justify-content: center;
   padding: 10px;
-  border-radius: 0.25em;
   width: 80vw;
 }
 
@@ -141,7 +140,6 @@
   align-content: center;
   justify-content: center;
   padding: 10px;
-  border-radius: 0.25em;
   width: 50vw;
   }
 }
@@ -150,7 +148,7 @@
 .skills {
   width: 100px;
   height: 100px;
-  margin: 0.5em 0.5em 0.5em 0.5em;
+  margin: 0.5em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -158,8 +156,6 @@
   background-color: transparent;
   text-decoration: none;
   color: black;
-  text-align: center;
-  border-radius: 4px;
 }
 
 #splashAnimation {
