--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,5 +1,4 @@
 .container {
-  padding: 0 2rem;
 }
 
 .main{
@@ -14,20 +13,18 @@
 }
 
 .nav{
+  padding: 0px 20px 0px 20px;
   z-index: 1;
   position:fixed;
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: #000;
+  justify-content: space-between;
+  background-color: #111;
   width: 100vw;
   h2{
     color:orange;
     margin-right: 20px;
-  }
-  h3{
-    margin-right: 10px;
-    margin-left: 10px;
   }
 }
 
@@ -281,6 +278,30 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+}
+
+.resumePage{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height:100vh;
+  a{
+    width:100vw;
+    margin-bottom: 20px;
+    margin-left: 20px;
+  }
+}
+
+.resumeBox{
+background-color: #444;
+width:90vw;
+height:90vh;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+border-radius: 10px;
 }
 
 .title a {
