--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -26,6 +26,13 @@
     color:orange;
     margin-right: 20px;
   }
+  a{
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s;
+  }
+  a:hover{
+    color: orange;
+  }
 }
 
 .headerBox {
@@ -37,6 +44,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  h1{
+    font-family: 'Roboto', sans-serif;
+  }
 }
 
 @media (min-width: 1000px) {
@@ -380,7 +390,7 @@ border-radius: 10px;
 }
 
 .logo {
-  height: 1em;
+  // height: 1em;
   margin-left: 0.5rem;
 }
 
@@ -398,8 +408,5 @@ border-radius: 10px;
   }
   .code {
     background: #000;
-  }
-  .logo img {
-    filter: invert(1);
   }
 }
