--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,3 @@
-// ADD COLOR THEMES FOR DARK/LIGHT MODE
 
 .container {
 }
@@ -39,9 +38,8 @@
 
 .headerBox {
   background-color: #222;
-  width: 90vw;
-  border-radius: 10px;
-  margin-top: 20px;
+  width: 100vw;
+  height:400px;
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
