--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -218,25 +218,24 @@
 
 
 .contactBox {
-  background-color: #222;
-  width: 90vw;
-  border-radius: 10px;
-  margin-top: 15px;
-  margin-bottom: 15px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  padding: 10px;
+  width: 80vw;
 }
 
 @media (min-width: 1000px) {
   .contactBox{
-    padding: 4rem 0;
-    width: 50vw;
-    flex: 1;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  padding: 10px;
+  width: 50vw;
   }
 }
 
